@@ -29,6 +29,11 @@ Version 2.0.4 -
   per suggestions from Williamzjc - thanks William! (Oh yeah, I'm not
   supporting Python 2.3 with this code any more...)
 
+- Added ParserElement.runTests, a little test bench for quickly running
+  an expression against a list of sample input strings. Basically, I got 
+  tired of writing the same test code over and over, and finally added it
+  as a test point method on ParserElement.
+
 
 Version 2.0.3 - 
 ---------------------------
